# Command-Line-Tool-TP-ES2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  use1.py  use2.py
.github/workflows/: tests.yml
src/: cognitive_analysis.py  commits_info.py  loc_analysis.py  param_analysis.py
src/minero/: code_smells_analysis.py  cognitive_analysis.py  loc_analysis.py  main.py
tests/: test_code_smells_analysis.py  test_cognitive_analysis.py  test_commits_info.py  test_loc_analysis.py  test_main.py  test_param_analysis.py
